<resources>
    <string name="default_incoming_notification_channel_id" translatable="false">FCMaQ12Cfx@14_silent_v2</string>
    <string name="app_name">Phone Dialer &amp; Contacts</string>
    <string name="permission_access">Enable required permissions to ensure full functionality ot the app.</string>
    <string name="calls">Calls</string>
    <string name="notifications">Notification</string>
    <string name="calls_desc">Turn on phone call permission to message instantly from the call screen.</string>
    <string name="notification_desc">Enable notification to stay updated with important messages.</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="grant_app_access">Grant App Access</string>
    <string name="language">Language</string>
    <string name="done">Done</string>
    <string name="favorite">Favorite</string>
    <string name="recent">Recent</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="keypad">Keypad</string>
    <string name="phone">Phone</string>
    <string name="set_contacts_default">Set Contact as default</string>
    <string name="set_default_app">Set As Default App</string>
    <string name="default_app_desc">Phone can only make and receive calls if it\'s your default phone app.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="older">Older</string>
    <string name="filter">Filter</string>
    <string name="all_calls">All Calls</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="calling_">Calling...</string>
    <string name="on_hold">On Hold</string>
    <string name="outgoing_calls">Outgoing Calls</string>
    <string name="create_a_new_group">Create a new Group</string>
    <string name="speed_dial_number">Speed Dial Number</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_desc">Are you sure you want to \nclear history?</string>
    <string name="clear">Clear</string>
    <string name="sync_contact">Sync Contact</string>
    <string name="settings">Settings</string>
    <string name="call_assist">Call Assist</string>
    <string name="caller_id_disables">Caller ID Disables!</string>
    <string name="personalisation">Personalisation</string>
    <string name="light_mode_app">Light Mode</string>
    <string name="app_theme">App Theme</string>
    <string name="system_english">System (English)</string>
    <string name="general">General</string>
    <string name="block_number">Block Number</string>
    <string name="manage_create_contact_show_fields">Manage create contact show fields</string>
    <string name="show_a_call_confirmation">Show a call confirmation dialog before initiating a call</string>
    <string name="calling">Calling</string>
    <string name="remind_me">Set Remind </string>
    <string name="message">Message</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="add_call">Add Call</string>
    <string name="hold">Hold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="please_text_me">Please text me</string>
    <string name="can_you_call_back_later">Can you call back later?</string>
    <string name="i_ll_call_you_back">I’ll call you back</string>
    <string name="enter_massage">Enter Massage</string>
    <string name="send">Send</string>
    <string name="write_a_new_message">Write a new message</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="merge">Merge</string>
    <string name="swap">Swap</string>
    <string name="tap_the_button">Tap the “+” button and \nadd favorite contact</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="more">More</string>
    <string name="video_call">Video Call</string>
    <string name="manage">Manage</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="storage_location">Storage Location</string>
    <string name="share">Share</string>
    <string name="choose_your_preferred_app">Choose your preferred app</string>
    <string name="conference_participants">Conference Participants</string>
    <string name="search_contact">Search Contact...</string>
    <string name="block_contacts">Block</string>
    <string name="speed_dial">Speed Dial</string>
    <string name="quick_response">Quick Response</string>
    <string name="sound_vibration"><![CDATA[Sound & Vibration]]></string>
    <string name="merge_duplicate_contacts">Merge duplicate contacts</string>
    <string name="sim_preference">SIM Preference</string>
    <string name="dial_pad_sound">Dial Pad Sound</string>
    <string name="show_flash_on_call">Show Flash on Call</string>
    <string name="use_swipe_to_action">Use Swipe to action</string>
    <string name="change_ringtone">Change Ringtone</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="mobile">Mobile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="set_default">Default Mode</string>
    <string name="block_numbers">Block Numbers</string>
    <string name="no_blocked_contacts">No Blocked Contacts</string>
    <string name="unblock">Unblock</string>
    <string name="themes">Themes</string>
    <string name="speed_dial_numbers">Speed Dial Numbers</string>
    <string name="assign_speed_dial_numbers">Assign speed dial numbers</string>
    <string name="add_speed_dial_number">Add Speed Dial Number</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_6">6.</string>
    <string name="_7">7.</string>
    <string name="_8">8.</string>
    <string name="_9">9.</string>
    <string name="select_contact">Select Contact</string>
    <string name="add_quick_response">Add Quick Response</string>
    <string name="enter_your_massage">Enter your massage</string>
    <string name="ok">Ok</string>
    <string name="can_t_talk_right_now">Can’t talk right now.</string>
    <string name="i_ll_call_you_later">I’ll call you later</string>
    <string name="i_m_on_my_way">I’m on my way</string>
    <string name="can_t_talk_now_call_me_later">Can’t talk now. Call me later.</string>
    <string name="all">All</string>
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="contact_details">Contact Details</string>
    <string name="add">Add</string>
    <string name="tag">Tag</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="unblock_contact">Unblock Contact?</string>
    <string name="you_will_be_able_to_receive_call">You will be able to receive calls from this contact.</string>
    <string name="block_contact">Block Contact?</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_contact">Delete Contact?</string>
    <string name="are_you_sure_you_want_to_delete_this_contact">Are you sure you want to delete this contact?</string>
    <string name="are_you_sure_you_want_to_delete_all_history">Are you sure you want to delete all history?</string>
    <string name="history_deleted">History deleted successfully</string>
    <string name="no_recent_history">No Recent History</string>
    <string name="no_recent_history_records_found">No recent history records found</string>
    <string name="you_don_t_have_any_blocked_contacts_yet">You don’t have any blocked contacts yet</string>
    <string name="no_contacts">No Contacts</string>
    <string name="private_calls_without_saved_numbers">Private calls without saved numbers</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="custom_ringtone">Custom Ringtone</string>
    <string name="recent_ringtone">Recent Ringtone</string>
    <string name="default_">Default</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="please_allow_modify_system_settings_to_change_ringtone">Please allow \'Modify system settings\' to change ringtone</string>
    <string name="select_all">Select all</string>
    <string name="send_message">Send Message</string>
    <string name="enter_number">enter number</string>
    <string name="smart_contact_app_to_">Smart contact app to manage calls,\nnumbers, favorites easily</string>
    <string name="call_search_and_save_contacts">Call, Search and Save Contacts</string>
    <string name="sync_from_all_gmail_sim_amp_phone"><![CDATA[Sync from all Gmail, SIM & Phone]]></string>
    <string name="we_don_t_collect_personal">We don’t collect personal or sensitive data. Your data stays private. %1$s and %2$s</string>
    <string name="to_make_receive_calls_set_this_app">To make receive calls. set this app as the\ndefault dialer or cancel to skip</string>
    <string name="permissions_required">Permission</string>
    <string name="call_logs">Call Logs</string>
    <string name="call_log_desc">We collect limited information about your calls, such as phone numbers and incoming/outgoing call details, to display your call history and help you manage your calls effectively.</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_desc">We access information about your contacts, such as phone numbers and associated names, but this data is kept on your device.</string>
    <string name="display_over_other_apps">Display Over Other Apps</string>
    <string name="display_over_desc">Enable this to show the call screen and caller information over other apps when you receive a call.</string>
    <string name="default_dialer">Default Dialer</string>
    <string name="default_dialer_desc">To make and receive calls, this app must be your default dialer.</string>
    <string name="contact_safe">Your contacts are safe and will not be shared with anyone</string>
    <string name="continue_">Continue</string>
    <string name="permissions_are_required">Permissions are required. Please enable them in settings.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="set_as_default_dialer">Set as Default Dialer</string>
    <string name="to_view_and_manage_system_block">To view and manage system-blocked numbers, this app must be set as your default dialer. Would you like to set it now?</string>
    <string name="set_as_default">Set as Default</string>
    <string name="not_now">Not Now</string>
    <string name="set_as_default_dialer_to_sync_system">Set as default dialer to sync system blocked numbers</string>
    <string name="no_image_selected">No image selected</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="please_allow_modify_system">Please allow \'Modify system settings\' to use this feature</string>
    <string name="set_tag">Set Tag</string>
    <string name="set_your_favorite_tag_to_contact">set your favorite tag to contact</string>
    <string name="enter_tag">enter tag</string>
</resources>