<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/all_rounded_corner_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_text_me"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/please_text_me"
            android:textColor="@color/black_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/tv_call_later"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/_10sdp"
            android:text="@string/can_you_call_back_later"
            android:textColor="@color/black_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/tv_call_back"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/_10sdp"
            android:text="@string/i_ll_call_you_back"
            android:textColor="@color/black_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/border_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_message"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                app:cardBackgroundColor="@color/bg_color"
                app:cardCornerRadius="@dimen/_50sdp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="@dimen/_8sdp"
                    android:src="@drawable/ic_add" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/write_a_new_message"
                android:textColor="@color/black_color" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_send_massage"
                style="@style/TextStyle.Medium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_massage"
                android:singleLine="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/bg_color"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <TextView
                    style="@style/TextStyle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/send"
                    android:textColor="@color/black_color" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</layout>