<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/all_rounded_corner_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_delete"
            style="@style/TextStyle.Medium"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect_bg"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/delete"
            android:textColor="@color/black_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/tv_block"
            style="@style/TextStyle.Medium"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/ripple_effect_bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/block"
            android:textColor="@color/black_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/tv_change_ringtone"
            style="@style/TextStyle.Medium"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/ripple_effect_bg"
            android:padding="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/change_ringtone"
            android:textColor="@color/black_color" />


    </LinearLayout>
</layout>