<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_rounded"
        android:padding="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/view_line"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_4sdp"
            app:cardBackgroundColor="@color/bg_color"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_dialog"
            style="@style/TextStyle.MediumLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/set_tag"
            android:textColor="@color/black_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line" />

        <TextView
            android:id="@+id/tv_subtitle"
            style="@style/TextStyle.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_your_favorite_tag_to_contact"
            android:textColor="@color/grey_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog" />

        <LinearLayout
            android:id="@+id/ll_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_corner_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle">

            <EditText
                android:id="@+id/edt_tag"
                style="@style/TextStyle.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/enter_tag"
                android:imeOptions="actionDone"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black_color"
                android:textColorHint="@color/grey_color" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_save"
            style="@style/TextStyle.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textColor="@color/blue_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_tag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>