<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="OnClickHandler"
            type="com.example.contactmanager.utils.OnClickHandler" />

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.language.LanguageActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:onClick="@{ (v) -> OnClickHandler.onClick(v)}"
                android:text="@string/allow_permission"
                android:textStyle="bold"
                app:cardBackgroundColor="@color/blue_color"
                app:cardCornerRadius="@dimen/_15sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>